fix dark mode css

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,3 +4,14 @@
 @import './html.content.css';
 @import 'tailwindcss/utilities';
 
+/* @media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: light;
+  }
+} */
